# rp2040_fred

./: bus_protocol.txt  control  lathe_19_2.ssd  mos.asm  notes.txt  plan.txt  protocol.txt  tcl202.asm  tcl202_sym.asm
rp2040_fred/: .gitignore  firmware_outline.md  hardware.md  pinmap_template.md  python_pyo3_migration_plan.md  usb_plan.txt
rp2040_fred/firmware/: Cargo.toml  README.md  build.rs
rp2040_fred/firmware/.cargo/: config.toml
rp2040_fred/firmware/examples/: mock_bus.rs
rp2040_fred/firmware/src/: bridge_proto.rs  bridge_service.rs  dro_decode.rs  lib.rs  log.rs  main.rs  pins.rs  protocol.rs  resources.rs  transport.rs  transport_mock.rs  transport_pio.rs
rp2040_fred/firmware/src/transport/: master.rs  mock.rs  passive.rs  pio.rs  transport_master.rs  transport_mock.rs  transport_passive.rs  transport_pio.rs
rp2040_fred/firmware/src/transport/master/: bus.rs
rp2040_fred/firmware/src/transport/mock/: bridge_service.rs  mock_bus.rs  protocol.rs
rp2040_fred/firmware/src/transport/pio/: master.rs  passive.rs
rp2040_fred/firmware/src/transport/transport_master/: bus.rs
rp2040_fred/firmware/src/transport/transport_mock/: bridge_service.rs  mock_bus.rs
rp2040_fred/host/: Cargo.toml  README.md  capture_format.txt
rp2040_fred/host/src/: capture_file.rs  dro_decode.rs  lib.rs  main.rs  monitor.rs  trace_decode.rs  transport.rs
rp2040_fred/pio/: bus_master.pio  fred_transport.pio  passive_sniffer.pio
rp2040_fred/protocol/: Cargo.toml
rp2040_fred/protocol/src/: bridge_proto.rs  lib.rs  mock_bus.rs  protocol.rs  trace_decode.rs
rp2040_fred/python/: README.md  fred_client.py  monitor_loop.py  pyproject.toml
rp2040_fred/python/fred_client/: __init__.py
rp2040_fred/python/rust_ext/: Cargo.toml
rp2040_fred/python/rust_ext/src/: lib.rs
