[package]
name = "rp2040-fred-firmware"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt-log","mock-bus"]
mock-bus = []
pio-real = []
defmt-log = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-rp/defmt",
]

[dependencies]
assign-resources = "0.5.0"
rp2040-fred-protocol = { path = "../protocol" }

[target.'cfg(target_arch = "arm")'.dependencies]
portable-atomic = { version = "1", features = ["critical-section"] }
panic-halt = "0.2"
panic-probe = { version = "=1.0.0", features = ["print-defmt"], optional = true }
defmt = { version = "=1.0.1", optional = true }
defmt-rtt = { version = "=1.0.0", optional = true }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = { version = "0.1" }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "critical-section-impl", "time-driver", "rp2040"] }
embassy-usb = { version = "0.6.0" }
static_cell = "2"
heapless = "0.9.2"
pio = "0.3"
pio-proc = "0.3"
rp-pac = "7"

[profile.dev]
opt-level = 1
debug = 2
codegen-units = 1
lto = false

[profile.release]
opt-level = 3
debug = 1
codegen-units = 1
lto = true
