[package]
name = "rp2040-fred-firmware"
version = "0.1.0"
edition = "2021"

[features]
default = ["defmt-log"]
defmt-log = [
  "dep:defmt",
  "dep:defmt-rtt",
  "dep:panic-probe",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-rp/defmt",
]

[dependencies]
assign-resources = "0.5.0"
enum_dispatch = "0.3.13"
rp2040-fred-protocol = { path = "../protocol" }

[target.'cfg(target_arch = "arm")'.dependencies]
portable-atomic = { version = "1", features = ["critical-section"] }
panic-halt = "1"
panic-probe = { version = "=1.0.0", features = ["print-defmt"], optional = true }
defmt = { version = "=1.0.1", optional = true }
defmt-rtt = { version = "=1.1.0", optional = true }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = { version = "0.1" }
embassy-time = { version = "0.5.1", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "critical-section-impl", "time-driver", "rp2040"] }
embassy-usb = { version = "0.6.0" }
static_cell = "2"
heapless = "0.9.2"
pio = "0.3"
pio-proc = "0.3"
rp-pac = "7"

[profile.dev]
opt-level = 1
debug = 2
codegen-units = 1
lto = false

[profile.release]
opt-level = 3
debug = 1
codegen-units = 1
lto = true

[lints.clippy]
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
# indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"